--- a/app/src/main/res/layout/activity_view_network.xml
+++ b/app/src/main/res/layout/activity_view_network.xml
@@ -3,94 +3,137 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/purple"
     android:layout_height="match_parent"
+    android:background="@color/purple"
     tools:context=".ui.network.ViewNetworkActivity">
 
-    <include layout="@layout/layout_header"
-        android:id="@+id/layout_header"/>
+    <include
+        android:id="@+id/layout_header"
+        layout="@layout/layout_header" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:padding="15dp"
         android:background="@drawable/top_border"
-        app:layout_constraintTop_toBottomOf="@+id/layout_header"
-        app:layout_constraintBottom_toBottomOf="parent">
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:id="@+id/tv_cityName"
-    android:layout_marginTop="10dp"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    android:text="City:"/>
+        android:padding="15dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/layout_header">
+
         <TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:id="@+id/tv_counter"
-    android:layout_marginTop="10dp"
-    app:layout_constraintTop_toTopOf="parent"
+            android:id="@+id/tv_cityName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="City:"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tv_counter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:layout_marginEnd="5dp"
+            android:text="City:"
             app:layout_constraintEnd_toEndOf="parent"
-    android:text="City:"/>
+            app:layout_constraintTop_toTopOf="parent" />
+
         <RelativeLayout
             android:id="@+id/layout_result"
             android:layout_width="match_parent"
-            android:visibility="visible"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/tv_cityName"
             android:layout_marginTop="10dp"
-            android:background="@drawable/border">
+            android:background="@drawable/border"
+            android:visibility="visible"
+            app:layout_constraintTop_toBottomOf="@+id/tv_cityName">
+
             <RelativeLayout
                 android:id="@+id/layout1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/tag_boarder"
-                app:layout_constraintTop_toTopOf="parent"
-                >
+                app:layout_constraintTop_toTopOf="parent">
 
                 <TextView
                     android:id="@+id/tv_name"
                     android:layout_width="90dp"
                     android:layout_height="wrap_content"
-                    android:text="Counter Name"
                     android:layout_centerVertical="true"
-                    android:textSize="12sp"
                     android:layout_marginStart="10dp"
-                    android:textColor="@color/white"/>
+                    android:text="Counter Name"
+                    android:textColor="@color/white"
+                    android:textSize="12sp" />
+
                 <View
                     android:id="@+id/view1"
                     android:layout_width="1dp"
                     android:layout_height="34dp"
-                    android:background="@color/black"
+                    android:layout_marginStart="10dp"
                     android:layout_toRightOf="@+id/tv_name"
-                    android:layout_marginStart="10dp"/>
+                    android:background="@color/black" />
+
                 <TextView
                     android:id="@+id/tv_no"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Address"
-                    android:gravity="center"
-                    android:layout_centerVertical="true"
                     android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
                     android:layout_toRightOf="@+id/view1"
-                    android:textColor="@color/white"/>
+                    android:gravity="center"
+                    android:text="Address"
+                    android:textColor="@color/white" />
             </RelativeLayout>
+
             <View
                 android:id="@+id/view2"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@color/black"
                 android:layout_below="@+id/layout1"
-                />
+                android:background="@color/black" />
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_stat"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                tools:listitem="@layout/list_viewnetwork"
-                android:layout_below="@+id/view2"/>
+                android:layout_below="@+id/view2"
+                tools:listitem="@layout/list_viewnetwork" />
         </RelativeLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/rl_noDataFound"
+        android:layout_width="140dp"
+        android:layout_height="140dp"
+        android:visibility="gone"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+
+        >
+        <ImageView
+            android:id="@+id/iv_noDataFound"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/noitem"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            />
+        <TextView
+            android:id="@+id/tv_noDataFound"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="No City Found"
+            android:gravity="center"
+            android:textSize="16sp"
+            android:padding="5dp"
+            android:fontFamily="@font/poppins_semibold"
+            android:textColor="@color/black"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/iv_noDataFound"
+            />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
