--- a/app/src/main/res/layout/fragment_our_network.xml
+++ b/app/src/main/res/layout/fragment_our_network.xml
@@ -150,6 +150,45 @@
         </RelativeLayout>
 
 
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/rl_noDataFound"
+        android:layout_width="140dp"
+        android:layout_height="140dp"
+        android:visibility="gone"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+
+        >
+        <ImageView
+            android:id="@+id/iv_noDataFound"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/noitem"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            />
+        <TextView
+            android:id="@+id/tv_noDataFound"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="No City Found"
+            android:gravity="center"
+            android:textSize="16sp"
+            android:padding="5dp"
+            android:fontFamily="@font/poppins_semibold"
+            android:textColor="@color/black"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/iv_noDataFound"
+            />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
