--- a/app/src/main/res/layout/fragment_our_network.xml
+++ b/app/src/main/res/layout/fragment_our_network.xml
@@ -73,6 +73,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:paddingStart="15dp"
+                android:singleLine="true"
+                android:imeOptions="actionSearch"
              />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -87,68 +89,81 @@
             android:textColor="@color/black"
             android:textSize="16sp"/>
 
-        <RelativeLayout
-            android:id="@+id/layout_result"
+        <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:visibility="gone"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/tv_headings"
+            android:layout_height="0dp"
             android:layout_marginTop="10dp"
-            android:background="@drawable/border">
+            android:layout_marginBottom="20dp"
+            app:layout_constraintTop_toBottomOf="@+id/tv_headings"
+            app:layout_constraintBottom_toBottomOf="parent"
+            >
             <RelativeLayout
-                android:id="@+id/layout1"
+                android:id="@+id/layout_result"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/tag_boarder"
-                app:layout_constraintTop_toTopOf="parent"
-                >
-
-                <TextView
-                    android:id="@+id/tv_name"
-                    android:layout_width="90dp"
+                android:layout_height="match_parent"
+                android:background="@drawable/border">
+                <RelativeLayout
+                    android:id="@+id/layout1"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="City Name"
-                    android:layout_centerVertical="true"
-                    android:textSize="12sp"
-                    android:layout_marginStart="10dp"
-                    android:textColor="@color/white"/>
+                    android:background="@drawable/tag_boarder"
+                    app:layout_constraintTop_toTopOf="parent"
+                    >
+
+                    <TextView
+                        android:id="@+id/tv_name"
+                        android:layout_width="90dp"
+                        android:layout_height="wrap_content"
+                        android:text="City Name"
+                        android:layout_centerVertical="true"
+                        android:textSize="12sp"
+                        android:layout_marginStart="10dp"
+                        android:textColor="@color/white"/>
+                    <View
+                        android:id="@+id/view1"
+                        android:layout_width="1dp"
+                        android:layout_height="34dp"
+                        android:background="@color/black"
+                        android:layout_toRightOf="@+id/tv_name"
+                        android:layout_marginStart="50dp"/>
+                    <TextView
+                        android:id="@+id/tv_no"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="No.of City office"
+                        android:layout_centerVertical="true"
+
+                        android:layout_marginStart="50dp"
+                        android:layout_toRightOf="@+id/view1"
+                        android:textColor="@color/white"/>
+                </RelativeLayout>
+
                 <View
-                    android:id="@+id/view1"
-                    android:layout_width="1dp"
-                    android:layout_height="34dp"
+                    android:id="@+id/view2"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
                     android:background="@color/black"
-                    android:layout_toRightOf="@+id/tv_name"
-                    android:layout_marginStart="50dp"/>
-                <TextView
-                    android:id="@+id/tv_no"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="No.of City office"
-                    android:layout_centerVertical="true"
+                    android:layout_below="@+id/layout1"
+                    />
 
-                    android:layout_marginStart="50dp"
-                    android:layout_toRightOf="@+id/view1"
-                    android:textColor="@color/white"/>
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_stat"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    tools:listitem="@layout/list_network"
+                    android:layout_below="@+id/view2"/>
+
             </RelativeLayout>
-            <View
-                android:id="@+id/view2"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/black"
-                android:layout_below="@+id/layout1"
-                />
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_stat"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                tools:listitem="@layout/list_network"
-                android:layout_below="@+id/view2"/>
-        </RelativeLayout>
+
+
+        </androidx.core.widget.NestedScrollView>
+
 
 
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/rl_noDataFound"
         android:layout_width="140dp"
